--- a/src/style.css
+++ b/src/style.css
@@ -1,13 +1,3 @@
-body {
-  background: rgb(4, 212, 232);
-  background: linear-gradient(
-    90deg,
-    rgba(4, 212, 232, 1) 0%,
-    rgba(183, 121, 255, 1) 100%,
-    rgba(255, 191, 100, 1) 100%
-  );
-}
-
 li {
   list-style: none;
 }
@@ -27,6 +17,20 @@ h1 {
 }
 a {
   margin-left: 125px;
+}
+.container {
+  padding: 3px 0px;
+  margin: 30px auto;
+  border-radius: 10px;
+  border: solid rgb(76, 76, 142);
+  box-sizing: border-box;
+  background: rgb(4, 212, 232);
+  background: linear-gradient(
+    90deg,
+    rgba(4, 212, 232, 1) 0%,
+    rgba(183, 121, 255, 1) 100%,
+    rgba(255, 191, 100, 1) 100%
+  );
 }
 
 .allColl {
